--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^3.1.3",
+    "@total-typescript/ts-reset": "^0.4.2",
+    "@types/three": "^0.152.1",
     "astro": "^2.5.0",
     "tailwindcss": "^3.0.24",
-    "three": "^0.153.0"
+    "three": "^0.153.0",
+    "three-bvh-csg": "^0.0.5",
+    "three-mesh-bvh": "^0.6.0",
+    "three.interactive": "^1.7.0"
   }
 }
