--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,10 @@
 {
-  "extends": "astro/tsconfigs/strictest"
+  "extends": "astro/tsconfigs/strictest",
+  "compilerOptions": {
+    "module": "amd",
+    "sourceMap": true,
+    "moduleResolution": "node",
+    "types": ["three"]
+  },
+  "exclude": ["node_modules"]
 }
